fixing settings, messaging